# Voltray

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Main.cpp  NOTICE  README.md  build.bat  build.sh  docker-build.bat  docker-compose.yml
Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h
Editor/Components/: Assets.cpp  Assets.h  CMakeLists.txt  Console.cpp  Console.h  Dockspace.cpp  Dockspace.h  Inspector.cpp  Inspector.h  Settings.cpp  Settings.h  Toolbar.cpp  Toolbar.h  Viewport.cpp  Viewport.h
Editor/Components/Assets/: ASSET_SYSTEM_DOCUMENTATION.md  AssetsPanel.cpp  AssetsPanel.h  CMakeLists.txt
Editor/Components/Assets/Core/: AssetItem.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt
Editor/Components/Assets/Core/Private/: AssetFilter.cpp  AssetManager.cpp  GlobalAssetProvider.cpp  LocalAssetProvider.cpp
Editor/Components/Assets/Core/Public/: AssetFilter.h  AssetItem.h  AssetManager.h  AssetProvider.h  GlobalAssetProvider.h  LocalAssetProvider.h
Editor/Components/Assets/DragDrop/: AssetDragDrop.cpp  AssetDragDrop.h  CMakeLists.txt
Editor/Components/Assets/DragDrop/Private/: AssetDragDrop.cpp
Editor/Components/Assets/DragDrop/Public/: AssetDragDrop.h
Editor/Components/Assets/Private/: AssetsPanel.cpp
Editor/Components/Assets/Public/: AssetsPanel.h
Editor/Components/Assets/UI/: AssetBrowser.cpp  AssetBrowser.h  CMakeLists.txt  ContextMenu.cpp  ContextMenu.h  NavigationBar.cpp  NavigationBar.h
Editor/Components/Assets/UI/Private/: AssetBrowser.cpp  AssetBrowserWidget.cpp  AssetRenderer.cpp  AssetsPanel.cpp  AssetsPanelRefactored.cpp  ContextMenu.cpp  NavigationBar.cpp
Editor/Components/Assets/UI/Public/: AssetBrowser.h  AssetBrowserWidget.h  AssetRenderer.h  AssetsPanel.h  AssetsPanelRefactored.h  ContextMenu.h  NavigationBar.h
Editor/Components/Assets/Utils/: CMakeLists.txt  FileOperations.cpp  FileOperations.h  IconRenderer.cpp  IconRenderer.h
Editor/Components/Assets/Utils/Private/: AssetOperations.cpp  FileOperations.cpp  IconRenderer.cpp
Editor/Components/Assets/Utils/Public/: AssetOperations.h  FileOperations.h  (+1 more)
Editor/Components/Private/: Console.cpp  Dockspace.cpp  Inspector.cpp  Settings.cpp  Toolbar.cpp
Editor/Components/Public/: Console.h  Dockspace.h  Inspector.h  Settings.h  Toolbar.h
Editor/Components/Viewport/: CMakeLists.txt  Viewport.cpp  Viewport.h  ViewportFramebuffer.cpp  ViewportFramebuffer.h  ViewportInput.cpp  ViewportInput.h  ViewportRenderer.cpp  ViewportRenderer.h  ViewportScene.cpp  ViewportScene.h
Editor/Components/Viewport/Private/: Viewport.cpp  ViewportFramebuffer.cpp  ViewportInput.cpp  ViewportRenderer.cpp  ViewportScene.cpp
Editor/Components/Viewport/Public/: Viewport.h  ViewportFramebuffer.h  ViewportInput.h  ViewportRenderer.h  ViewportScene.h
Editor/Private/: EditorApp.cpp
Editor/Public/: EditorApp.h
Editor/UI/: CMakeLists.txt  Panel.cpp  Panel.h  Theme.cpp  Theme.h  UI.cpp  UI.h  WorkspaceDialog.cpp  WorkspaceDialog.h
Editor/UI/Panels/: CMakeLists.txt  OptionsPanel.cpp  OptionsPanel.h
Editor/UI/Panels/Private/: OptionsPanel.cpp
Editor/UI/Panels/Public/: OptionsPanel.h
Editor/UI/Private/: Panel.cpp  Theme.cpp  UI.cpp  WorkspaceDialog.cpp
Editor/UI/Public/: Panel.h  Theme.h  UI.h  WorkspaceDialog.h
Engine/: CMakeLists.txt  Entry.cpp
Engine/Animation/: Animation.h  AnimationExamples.h  AnimationTest.cpp  AnimationUtil.h  CMakeLists.txt  EasingFunctions.cpp  EasingFunctions.h  EasingTypes.h  README.md
Engine/Animation/Private/: EasingFunctions.cpp
Engine/Animation/Public/: Animation.h  AnimationExamples.h  AnimationUtil.h  EasingFunctions.h  EasingTypes.h
Engine/Config/: CMakeLists.txt  EngineSettings.cpp  EngineSettings.h
Engine/Config/Private/: EngineSettings.cpp
Engine/Config/Public/: EngineSettings.h
Engine/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Graphics/Camera/: BaseCamera.cpp  BaseCamera.h  CMakeLists.txt  CameraAnimator.cpp  CameraAnimator.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/Graphics/Camera/Private/: BaseCamera.cpp  CameraAnimator.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
Engine/Graphics/Camera/Public/: BaseCamera.h  CameraAnimator.h  OrthographicCamera.h  PerspectiveCamera.h
Engine/Graphics/Private/: IndexBuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/Graphics/Public/: IndexBuffer.h  Mesh.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
Engine/Input/: CMakeLists.txt  Input.cpp  Input.h
Engine/Input/Private/: Input.cpp
Engine/Input/Public/: Input.h
Engine/Loader/: AssimpLoader.cpp  CMakeLists.txt  IFormatLoader.h  MeshLoader.cpp  MeshLoader.h  OBJLoader.cpp
Engine/Loader/Private/: AssimpLoader.cpp  MeshLoader.cpp
Engine/Loader/Public/: IFormatLoader.h  MeshLoader.h
Engine/Math/: Mat4.cpp  Mat4.h  MathUtil.h  Transform.cpp  Vec2.h  vec3.cpp
Engine/Scene/: CMakeLists.txt  PrimitiveGenerator.cpp  PrimitiveGenerator.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectFactory.cpp  SceneObjectFactory.h
Engine/Scene/Private/: PrimitiveGenerator.cpp  Scene.cpp  SceneObject.cpp  SceneObjectFactory.cpp
Engine/Scene/Public/: PrimitiveGenerator.h  Scene.h  SceneObject.h  SceneObjectFactory.h
Math/: CMakeLists.txt  Mat4.cpp  Mat4.h  MathUtil.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h  Vec3.h  Vec4.cpp  Vec4.h  vec3.cpp
Math/Private/: Mat4.cpp  Ray.cpp  Transform.cpp  Vec3.cpp  Vec4.cpp
Math/Public/: Mat4.h  MathUtil.h  Ray.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Utils/: CMakeLists.txt  CrashLogger.cpp  CrashLogger.h  ResourceManager.cpp  ResourceManager.h  UserDataManager.cpp  UserDataManager.h  Workspace.cpp  Workspace.h
Utils/Private/: CrashLogger.cpp  ResourceManager.cpp  UserDataManager.cpp  Workspace.cpp
Utils/Public/: CrashLogger.h  ResourceManager.h  UserDataManager.h  Workspace.h
(+1010 files in other folders)
